stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_generic_record_field_access_mismatch.snap
---
source: tests/fixtures.rs
assertion_line: 2079
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/generic_record_field_access_mismatch.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × function argument type does not match
   ╭─[tests/fixtures/diagnostics/types/generic_record_field_access_mismatch.ml:5:7]
 4 │   let item = box { value: 1 };
 5 │   dbg(string_concat(item.value, ""))
   ·       ──────────────┬──────────────
   ·                     ╰── this call requires `String`, but the argument provides `i64`
 6 │ }
   ╰────
  help: pass an argument with the parameter type expected by the function
